Issue #2116179 by johnv: Moved workflow_type_map functions to own file workflow.node.type_map.inc.
Issue #2019345 by johnv: Fixed notice on workflow_tab_form when a node type has both Workflow_node and Workflow_field enabled.
Issue #2019345 by johnv: Moved code from workflow_admin_ui to Workflow->validate(), and added this check to Field settings form.
Issue #2115199 by johnv: Moved pages from workflow_admin_ui.module to workfow_admin_ui.pages.inc, reducing footprint for all-but-these pages.
Issue #2019345 by johnv: Added a create() function to classes Workflow and WorkflowState.
Issue #2115199 by johnv: Some cosmetic changes in workfow_admin_ui.pages.inc.
Issue #2019345 by johnv: Fixed notice when updating node in certain circumstances.
Issue #2019345 by johnv: Changed function names in workflow_rules to reflect they are Node API only.
Issue #2019345 by johnv: Fixed notice when an existing node does not have a workflow value yet.
Issue #1036580 by johnv: Fixed error in Workflow Node API on Node View page when another workflow was assigned to node type.
Issue #2119921 by johnv: Added dependency to Entity API module.
Issue #2102193 by johnv: Fixed documentation of hook_workflow() in workflow.api.inc
Issue #2019345 by johnv: Moved workflow_field_choices() to deprecated.inc, since it is completely replaced by WorkflowState->getOptions($node).
Issue #2019345 by johnv: Fixed messages from PAReview.sh.
Issue #2119921 by johnv: Moved workflow_node db functions to workflow.node.inc file.
Issue #2119921 by johnv: Moved workflow_requirements() to workflow.install file.
Issue #2019345 by johnv: Fixed messages from PAReview.sh.
Issue #2122541 by johnv: Added new submodule Workflow Node.
Issue #2122541 by johnv: Moved workflow_node-specific code from WorkflowState::deactivate() to hook workflownode_workflow('state delete').
Issue #2122541 by johnv: Changed call to workflow_node specific function in worflow_admin_ui.